--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://kit.fontawesome.com/871dbaf5ee.js" crossorigin="anonymous"></script>
   </body>
 </html>
